--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "codemirror": "^6.0.1",
+    "json-formatter-js": "^2.3.4"
   }
 }
