--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "codemirror": "^6.0.1",
-    "json-formatter-js": "^2.3.4"
+    "json-formatter-js": "^2.3.4",
+    "lodash": "^4.17.21"
   }
 }
