--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "css-loader": "^6.8.1",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "img-loader": "^4.0.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
@@ -21,7 +23,9 @@
   },
   "dependencies": {
     "codemirror": "^6.0.1",
+    "file-loader": "^6.2.0",
     "json-formatter-js": "^2.3.4",
+    "json-z": "^3.3.2",
     "lodash": "^4.17.21"
   }
 }
